kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-cpt
spec:
  ports:
    - port: 80
      name: web
      targetPort: web
  type: NodePort
  selector:
    app: ws-cpt
