kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ws-cpt
spec:
  ingressClassName: nginx
  rules:
    - host: cpt.foo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws-cpt
                port:
                  name: web
